sample-application/offer-calculator-charts/package/application/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    type: application
  name: offer-calculator-ingress
  namespace: offer-calculator
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: offer-calculator-web
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: offer-calculator-view
            port:
              number: 80
